--- a/src/style/components/home/profile.css
+++ b/src/style/components/home/profile.css
@@ -5,7 +5,7 @@
   --avatar-size: clamp(3.2rem, 7.3vw, 8rem);
   --name-size: clamp(1.2rem, 2.25vw, 4.8rem);
   --one-word-size: clamp(0.8rem, 1.55vw, 1.95rem);
-  --bio-size: clamp(0.5rem, 1.35vw, 1.55rem);
+  --bio-size: clamp(0.95rem, 1.2vw + 0.65rem, 1.55rem);
 
   width: var(--profile-max-width);
   padding: var(--profile-padding);
